Leadership Bio pages: desktop and mobile version of people pages with and without photo

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a {
 .svg-arrow-down, .svg-arrow-left-black, .bio-list .bio-list-content .owl-nav .owl-prev:hover, .table-view .table-view-content .dataTables_wrapper .dataTables_paginate .fg-button.previous:after, .svg-arrow-left-green, .insights-wrapper .insights-list .owl-nav .owl-prev:hover, .bio-list .bio-list-content .owl-nav .owl-prev, .svg-arrow-left-white, .insights-wrapper .insights-list .owl-nav .owl-prev, .table-view .table-view-content .dataTables_wrapper .dataTables_paginate .fg-button.previous:hover:after, .svg-arrow-right-black, .bio-list .bio-list-content .owl-nav .owl-next:hover, .table-view .table-view-content .dataTables_wrapper .dataTables_paginate .fg-button.next:after, .svg-arrow-right-green, .mega-nav .menu .has-submenu > a:after, .insights-wrapper .insights-list .owl-nav .owl-next:hover, .portfolio .tabs-content h2:after,
 .portfolio .tabs-content h5:after,
 .leadership .tabs-content h2:after,
-.leadership .tabs-content h5:after, .bio-list .bio-list-content .owl-nav .owl-next, .table-view .table-view-content .table-filters .ui-selectmenu-icon, .svg-arrow-right-white, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .table-view .table-view-content .collapsable-table h3:after, .table-view .table-view-content .collapsable-table .sub-tables h4:after, .table-view .table-view-content .dataTables_wrapper .dataTables_paginate .fg-button.next:hover:after, .svg-arrow-up, .svg-burger, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .svg-close-black, .svg-close-blue, form.search .form-content .close:hover, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .svg-facebook-green-fill, .two-column-content-wrapper .social-links .facebook:hover, .svg-facebook-green-outline, .two-column-content-wrapper .social-links .facebook, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .svg-insights-article, .insights-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .svg-linkedin-green-fill, .two-column-content-wrapper .social-links .linkedin:hover, .svg-linkedin-green-outline, .two-column-content-wrapper .social-links .linkedin, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .svg-map-icon, .fullimage-block .list li:before, .svg-search, form.search .form-content .do-search, .table-view .table-view-content .table-filters .search-filter-wrapper:after, .svg-search-blue, form.search .form-content .do-search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .svg-twitter-green-fill, .two-column-content-wrapper .social-links .twitter:hover, .svg-twitter-green-outline, .two-column-content-wrapper .social-links .twitter, .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover, .svg-user, .actions-nav .action-login, .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active, .svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .svg-view-all-green, .press-wrapper .content .view-all:before, .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube, .svg-youtube-green-fill, .two-column-content-wrapper .social-links .youtube:hover, .svg-youtube-green-outline, .two-column-content-wrapper .social-links .youtube, .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
+.leadership .tabs-content h5:after, .bio-list .bio-list-content .owl-nav .owl-next, .table-view .table-view-content .table-filters .ui-selectmenu-icon, .svg-arrow-right-white, .footer .footer-links h5:after, .insights-wrapper .insights-list .owl-nav .owl-next, .table-view .table-view-content .collapsable-table h3:after, .table-view .table-view-content .collapsable-table .sub-tables h4:after, .table-view .table-view-content .dataTables_wrapper .dataTables_paginate .fg-button.next:hover:after, .svg-arrow-up, .svg-burger, .svg-chevron, form.search .form-content .search-types-toggle:after, .svg-chevron-green, form.search .form-content .search-types-toggle:hover:after, .svg-close, form.search .form-content .close, .svg-close-black, .svg-close-blue, form.search .form-content .close:hover, .svg-ellipse, .hero-slides.owl-carousel .owl-dot, .svg-ellipse-empty, .hero-slides.owl-carousel .owl-dot:hover, .svg-ellipse-selected, .hero-slides.owl-carousel .owl-dot.active, .svg-facebook, .footer .social-links .facebook, .hero-slides-wrapper .social-links .facebook, .svg-facebook-green-fill, .two-column-content-wrapper .social-links .facebook:hover, .svg-facebook-green-outline, .two-column-content-wrapper .social-links .facebook, .svg-facebook-white, .footer .social-links .facebook:hover, .hero-slides-wrapper .social-links .facebook:hover, .svg-insights-article, .insights-wrapper .article, .svg-insights-article-hover, .insights-wrapper .img-wrapper:hover .article, .svg-insights-audio, .insights-wrapper .audio, .svg-insights-audio-hover, .insights-wrapper .img-wrapper:hover .audio, .svg-insights-video, .insights-wrapper .video, .svg-insights-video-hover, .insights-wrapper .img-wrapper:hover .video, .svg-linkedin, .footer .social-links .linkedin, .hero-slides-wrapper .social-links .linkedin, .svg-linkedin-green-fill, .two-column-content-wrapper .social-links .linkedin:hover, .svg-linkedin-green-outline, .two-column-content-wrapper .social-links .linkedin, .svg-linkedin-white, .footer .social-links .linkedin:hover, .hero-slides-wrapper .social-links .linkedin:hover, .svg-map-icon, .fullimage-block .list li:before, .svg-search, form.search .form-content .do-search, .table-view .table-view-content .table-filters .search-filter-wrapper:after, .svg-search-blue, form.search .form-content .do-search:hover, .svg-search-icon, .actions-nav .action-search, .svg-search-icon-hover, .actions-nav .action-search:hover, .actions-nav .action-search.active, .svg-search-type-all, form.search .form-content .search-types .all label:before, form.search .form-content .search-types-toggle.all, .svg-search-type-insights, form.search .form-content .search-types .insights label:before, form.search .form-content .search-types-toggle.insights, .svg-search-type-people, form.search .form-content .search-types .people label:before, form.search .form-content .search-types-toggle.people, .svg-search-type-strategies, form.search .form-content .search-types .strategies label:before, form.search .form-content .search-types-toggle.strategies, .svg-twitter, .footer .social-links .twitter, .hero-slides-wrapper .social-links .twitter, .svg-twitter-green-fill, .two-column-content-wrapper .social-links .twitter:hover, .svg-twitter-green-outline, .two-column-content-wrapper .social-links .twitter, .svg-twitter-white, .footer .social-links .twitter:hover, .hero-slides-wrapper .social-links .twitter:hover, .svg-user, .actions-nav .action-login, .svg-user-hover, .actions-nav .action-login:hover, .actions-nav .action-login.active, .svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .person-bio .person-bio-content .back.link-underline:hover:before, .svg-view-all-green, .press-wrapper .content .view-all:before, .person-bio .person-bio-content .back.link-underline:before, .svg-youtube, .footer .social-links .youtube, .hero-slides-wrapper .social-links .youtube, .svg-youtube-green-fill, .two-column-content-wrapper .social-links .youtube:hover, .svg-youtube-green-outline, .two-column-content-wrapper .social-links .youtube, .svg-youtube-white, .footer .social-links .youtube:hover, .hero-slides-wrapper .social-links .youtube:hover {
   background: url("svg/sprite.css-17b631e5.svg") no-repeat;
 }
 
@@ -485,7 +485,7 @@ a {
   height: 41px;
 }
 
-.svg-view-all-blue, .press-wrapper .content .view-all:hover:before {
+.svg-view-all-blue, .press-wrapper .content .view-all:hover:before, .person-bio .person-bio-content .back.link-underline:hover:before {
   background-position: 99.64285714285714% 94.84126984126983%;
 }
 
@@ -494,11 +494,11 @@ a {
   height: 23px;
 }
 
-.svg-view-all-green, .press-wrapper .content .view-all:before {
+.svg-view-all-green, .press-wrapper .content .view-all:before, .person-bio .person-bio-content .back.link-underline:before {
   background-position: 99.64285714285714% 85.71428571428571%;
 }
 
-.svg-view-all-green-dims, .press-wrapper .content .view-all:before {
+.svg-view-all-green-dims, .press-wrapper .content .view-all:before, .person-bio .person-bio-content .back.link-underline:before {
   width: 23px;
   height: 23px;
 }
@@ -4704,6 +4704,103 @@ a.btn.primary:hover:before {
   .table-view .table-view-content .dataTables_wrapper {
     overflow: auto;
     width: 100%;
+  }
+}
+.person-bio {
+  padding: 80px 0 130px;
+}
+.person-bio .person-bio-content {
+  margin: 0 auto;
+  max-width: 1180px;
+}
+.person-bio .person-bio-content .back.link-underline {
+  display: inline-block;
+  min-height: 18px;
+  position: relative;
+  padding-left: 32px;
+  line-height: 15px;
+}
+.person-bio .person-bio-content .back.link-underline:before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  transform: rotate(180deg);
+  transition: background-image 0.2s ease-in-out;
+}
+.person-bio .person-bio-content img {
+  max-width: 324px;
+  margin-right: 55px;
+  height: 100%;
+}
+.person-bio .person-bio-content .bio-wrapper {
+  display: flex;
+  padding: 50px 0 0;
+  color: #000;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+}
+.person-bio .person-bio-content .bio-wrapper h1 {
+  margin: 0 0 5px;
+  color: #388067;
+  font-family: "orpheuspro";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 81px;
+}
+.person-bio .person-bio-content .bio-wrapper h2 {
+  margin-bottom: 35px;
+  color: #000;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 31px;
+}
+.person-bio .person-bio-content .bio-wrapper p {
+  margin-bottom: 25px;
+}
+
+@media screen and (max-width: 767px) {
+  .person-bio .person-bio-content .bio-wrapper {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .person-bio .person-bio-content .bio-wrapper h1 {
+    font-size: 26px;
+    line-height: 37px;
+  }
+  .person-bio .person-bio-content .bio-wrapper h2 {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .person-bio .person-bio-content .bio-wrapper img ~ .bio-text-wrapper h1 {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+@media screen and (max-width: 1180px) {
+  .person-bio {
+    padding: 50px 15px;
+  }
+  .person-bio .person-bio-content .bio-wrapper {
+    display: block;
+  }
+  .person-bio .person-bio-content .bio-wrapper img {
+    float: left;
+    width: 40%;
+    margin: 0 15px 35px 0;
+  }
+  .person-bio .person-bio-content .bio-wrapper img ~ .bio-text-wrapper {
+    padding-top: min(162px, 21.4818674%);
+  }
+  .person-bio .person-bio-content .bio-wrapper img ~ .bio-text-wrapper .bio-heading-wrapper {
+    transform: translateY(-50%);
+  }
+  .person-bio .person-bio-content .bio-wrapper .bio-description-wrapper {
+    clear: both;
   }
 }
 
